examples/valid/program25.c
int add(int a, int b) {
    return a + b;
}

int main(void) {
    int result;
    result = add(5, 3);
    return result;
}

