examples/invalid/program22.c
int f(int a, int b) {
    return a + b;
}

int main() {
    int x;
    x = f(5);
    return x;
}

